
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int sendbuf ;
typedef int bufmax ;
typedef int SOCKET ;


 int memset (char*,int ,int) ;
 int recv (int ,char*,int,int ) ;
 int send (int ,char*,int,int ) ;
 int strcat (char*,char*) ;
 scalar_t__ strlen (char*) ;

int send_buffer(SOCKET s, char * buf, char * remotehost, int port)
{
 char bufmax[1024];
 recv(s, bufmax, sizeof(bufmax),0);
 char sendbuf[1000];
 memset(sendbuf, 0, sizeof(sendbuf));
 strcat(sendbuf, "a001 LOGIN \"");
 strcat(sendbuf, buf);
 strcat(sendbuf, "\" password\r\n");
 int sentbytes=send(s, sendbuf, (int)strlen(sendbuf),0);
 if(sentbytes<(int)strlen(sendbuf)) return 0;
 return 1;
}
