; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_3627.c_send_buffer.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_3627.c_send_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"a001 LOGIN \22\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"\22 password\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_buffer(i32 %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca [1024 x i8], align 16
  %11 = alloca [1000 x i8], align 16
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* %6, align 4
  %14 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %15 = call i32 @recv(i32 %13, i8* %14, i32 1024, i32 0)
  %16 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %17 = call i32 @memset(i8* %16, i32 0, i32 1000)
  %18 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %19 = call i32 @strcat(i8* %18, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %20 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %21 = load i8*, i8** %7, align 8
  %22 = call i32 @strcat(i8* %20, i8* %21)
  %23 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %24 = call i32 @strcat(i8* %23, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %25 = load i32, i32* %6, align 4
  %26 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %27 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %28 = call i64 @strlen(i8* %27)
  %29 = trunc i64 %28 to i32
  %30 = call i32 @send(i32 %25, i8* %26, i32 %29, i32 0)
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %12, align 4
  %32 = getelementptr inbounds [1000 x i8], [1000 x i8]* %11, i64 0, i64 0
  %33 = call i64 @strlen(i8* %32)
  %34 = trunc i64 %33 to i32
  %35 = icmp slt i32 %31, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %38

37:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %38

38:                                               ; preds = %37, %36
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @strcat(i8*, i8*) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
